Fix possible infinite formatting calls

BUG: 452047